# echoplayer

./: .gitignore  Makefile  README.md
case/: Echo-R1-Rev1.FCStd  README.md  pyproject.toml
case/src/echoplayer/: main.py  r1_rev1.py  utils.py
docs/: bom.ods  pins_stm32h7r3z8j6.ods  pins_stm32h7r3z8t6.ods
echo-r1/: audio.kicad_sch  buttons.kicad_sch  cpu_memory.kicad_sch  debug_port.kicad_sch  echo-r1.kicad_pcb  echo-r1.kicad_pro  echo-r1.kicad_sch  lcd.kicad_sch  power_supply.kicad_sch  sdcard.kicad_sch  usb.kicad_sch
lib/: echoplayer.kicad_sym
lib/echoplayer.pretty/: Conn_GT-BTP30003-xxxxA-016A.kicad_mod  Conn_Jushuo_AFC07-S30ECA-00_LTR.kicad_mod  Conn_Jushuo_AFC07-S30ECA-00_RTL.kicad_mod  Conn_Jushuo_AFD01-S35FCC-00_LTR.kicad_mod  (+13 more)
mk/: gerber.mk  pcba.mk  schematic.mk
r1-rev1/: audio.kicad_sch  buttons.kicad_sch  cpu_memory.kicad_sch  debug_port.kicad_sch  echo-r1-rev1.kicad_pcb  echo-r1-rev1.kicad_pro  echo-r1-rev1.kicad_sch  lcd.kicad_sch  power_supply.kicad_sch  sdcard.kicad_sch  sym-lib-table  usb.kicad_sch
r1-rev1.1/: audio.kicad_sch  buttons.kicad_sch  cpu_memory.kicad_sch  debug_port.kicad_sch  echo-r1-rev1.1.kicad_pcb  echo-r1-rev1.1.kicad_pro  echo-r1-rev1.1.kicad_sch  lcd.kicad_sch  power_supply.kicad_sch  sdcard.kicad_sch  usb.kicad_sch
r1-rev2/: audio.kicad_sch  buttons.kicad_sch  cpu_memory.kicad_sch  debug_port.kicad_sch  echo-r1-rev2.kicad_dru  echo-r1-rev2.kicad_pcb  echo-r1-rev2.kicad_pro  echo-r1-rev2.kicad_sch  lcd.kicad_sch  power_supply.kicad_sch  sdcard.kicad_sch  usb.kicad_sch
scripts/: bomtool.pl  jlc_adjust.pl
(+55 files in other folders)
