[project]
name = "echoplayer-case"
version = "0.1"
authors = [ { name = "Aidan MacDonald", email = "amachronic@protonmail.com" } ]
requires-python = ">=3.11"
dependencies = [
    "ocp_vscode == 2.8.9",
    "build123d == 0.9.1",
]

[project.optional-dependencies]
dev = [
    "tox >= 4.27",
]

[project.scripts]
echoplayer-case = "echoplayer.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.tox]
requires = ["tox >= 4.27"]
env_list = ["mypy", "ruff", "test"]

[tool.tox.env.mypy]
description = "run type checker"
deps = ["mypy >= 1.16.1"]
commands = [["mypy", "src"]]

[tool.tox.env.ruff]
description = "run linter"
deps = ["ruff >= 0.12.1"]
commands = [["ruff", "check", "src"]]

[tool.tox.env.test]
description = "test case build"
commands = [
    ["echoplayer-case", "--test", "--r1-rev1"],
]
